exercise5/condor/695.0-error.txt
  File "Exercise5.py", line 134
    Dense(128,activation="relu"),
        ^
SyntaxError: invalid syntax
